# bloggn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker-publish.yml  test.yml
css/: input.css
migrations/2026-07-02-051401-0000_create_posts_table/: up.sql
migrations/2026-07-02-051422-0000_create_images_table/: up.sql
migrations/2026-07-03-120000-0000_create_passkeys_table/: down.sql  up.sql
migrations/2026-07-03-132400-0000_add_title_to_images/: down.sql  up.sql
migrations/2026-07-03-140200-0000_add_dimensions_to_images/: down.sql  up.sql
migrations/2026-07-04-001145-0000_create_profile/: up.sql
migrations/2026-07-05-183600-0000_add_published_to_posts/: down.sql  up.sql
src/: actions.rs  auth.rs  db.rs  main.rs  models.rs  schema.rs
templates/: 404.html.tera  admin_dashboard.html.tera  admin_edit_post.html.tera  admin_login.html.tera  admin_new_post.html.tera  admin_register.html.tera  blog_list.html.tera  blog_post.html.tera  index.html.tera  posts_loop.html.tera  tailwind.html.tera
tests/: ui_tests.rs
